After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796429 - FAIL: elements/rtpstorage on 32-bit IA32 (Archlinux32)
FAIL: elements/rtpstorage on 32-bit IA32 (Archlinux32)
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.14.1
Other Linux
: Normal normal
: 1.14.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-05-27 18:30 UTC by Andreas Baumann
Modified: 2018-05-28 09:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tests: rtpstorage: fix potential crashes / test failures on 32-bit (4.88 KB, patch)
2018-05-27 19:32 UTC, Tim-Philipp Müller
committed Details | Review

Description Andreas Baumann 2018-05-27 18:30:31 UTC
================================================================
   GStreamer Good Plug-ins 1.14.1: tests/check/test-suite.log
================================================================

# TOTAL: 99
# PASS:  98
# SKIP:  0
# XFAIL: 0
# FAIL:  1
# XPASS: 0
# ERROR: 0

.. contents:: :depth: 2

FAIL: elements/rtpstorage

Running suite(s): rtpstorage


Unexpected critical/warning: g_object_set_is_valid_property: object class 'GstRtpStorage' has no property named ''

Stack trace:
gst_debug_get_stack_trace (/usr/lib/libgstreamer-1.0.so.0.1401.0:0xb7dc86dc)
?? (/usr/lib/libgstcheck-1.0.so.0.1401.0:0xb7ed0df7)
g_logv (/usr/lib/libglib-2.0.so.0.5600.1:0xb7c2b92d)
g_log (/usr/lib/libglib-2.0.so.0.5600.1:0xb7c2ba80)
g_object_set_valist (/usr/lib/libgobject-2.0.so.0.5600.1:0xb7d203a9)
g_object_set (/usr/lib/libgobject-2.0.so.0.5600.1:0xb7d20e1f)
rtpstorage_resize (rtpstorage.c:103)
srunner_run_tagged (/usr/lib/libgstcheck-1.0.so.0.1401.0:0xb7edea75)
srunner_run (/usr/lib/libgstcheck-1.0.so.0.1401.0:0xb7edf173)
srunner_run_all (/usr/lib/libgstcheck-1.0.so.0.1401.0:0xb7edf19b)
gst_check_run_suite (/usr/lib/libgstcheck-1.0.so.0.1401.0:0xb7ed2569)
main (rtpstorage.c:547)
__libc_start_main (/usr/lib/libc-2.27.so:0xb79fadad)
_start (/data/gst-plugins-good/src/gst-plugins-good/tests/check/elements/rtpstorage:0x48b73c)

94%: Checks: 17, Failures: 1, Errors: 0
gstcheck.c:286:F:general:rtpstorage_resize:0: Unexpected critical/warning: g_object_set_is_valid_property: object class 'GstRtpStorage' has no property named ''
Check suite rtpstorage ran in 2.156s (tests failed: 1)
FAIL elements/rtpstorage (exit status: 1)
Comment 1 Tim-Philipp Müller 2018-05-27 19:32:51 UTC
Created attachment 372439 [details] [review]
tests: rtpstorage: fix potential crashes / test failures on 32-bit

Thanks for the bug report.

Could you test if this fixes it for you?
Comment 2 Andreas Baumann 2018-05-28 05:23:50 UTC
Yes, confirmed. Thanks, this fixes the issue.

PASS: elements/rtpstorage
Comment 3 Tim-Philipp Müller 2018-05-28 09:47:28 UTC
    commit 48dd93662d6c16fc5967ef4386a63db41683142d
    Author: Tim-Philipp Müller <tim@centricular.com>
    Date:   Sun May 27 20:29:47 2018 +0100

        tests: rtpstorage: fix potential crashes / test failures on 32-bit
        
        Pass 64 bits to g_object_set() for 64-bit integer properties like
        rtpstorage's "size-time" property.
        
        https://bugzilla.gnome.org/show_bug.cgi?id=796429

    (and only in master:)

    commit ed7a98d45b5ed46605759bf860fac0027ccf3951
    Author: Tim-Philipp Müller <tim@centricular.com>
    Date:   Sun May 27 20:34:50 2018 +0100

        webrtcbin: rtpstorage takes a 64-bit integer for "size-time" property
        
        https://bugzilla.gnome.org/show_bug.cgi?id=796429