webrtcbin: rtpstorage takes a 64-bit integer for "size-time" property

https://bugzilla.gnome.org/show_bug.cgi?id=796429